clients/terminal/src/lib/parser.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Block: peg$parseBlock };
  var peg$startRuleFunction = peg$parseBlock;

  var peg$c0 = "=";
  var peg$c1 = "|";
  var peg$c2 = "++";
  var peg$c3 = "==";
  var peg$c4 = "!=";
  var peg$c5 = "+";
  var peg$c6 = "-";
  var peg$c7 = "*";
  var peg$c8 = "/";
  var peg$c9 = "%";
  var peg$c10 = "..";
  var peg$c11 = ".";
  var peg$c12 = "(";
  var peg$c13 = ":";
  var peg$c14 = ",";
  var peg$c15 = ")";
  var peg$c16 = "=>";
  var peg$c17 = "[";
  var peg$c18 = "]";
  var peg$c19 = "{";
  var peg$c20 = "}";
  var peg$c21 = "\"";
  var peg$c22 = "true";
  var peg$c23 = "false";
  var peg$c24 = "'";
  var peg$c25 = " ";
  var peg$c26 = "#";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[^"]/;
  var peg$r2 = /^[_a-zA-Z]/;
  var peg$r3 = /^[_a-zA-Z0-9]/;
  var peg$r4 = /^[\r?\n]/;

  var peg$e0 = peg$literalExpectation("=", false);
  var peg$e1 = peg$literalExpectation("|", false);
  var peg$e2 = peg$literalExpectation("++", false);
  var peg$e3 = peg$literalExpectation("==", false);
  var peg$e4 = peg$literalExpectation("!=", false);
  var peg$e5 = peg$literalExpectation("+", false);
  var peg$e6 = peg$literalExpectation("-", false);
  var peg$e7 = peg$literalExpectation("*", false);
  var peg$e8 = peg$literalExpectation("/", false);
  var peg$e9 = peg$literalExpectation("%", false);
  var peg$e10 = peg$literalExpectation("..", false);
  var peg$e11 = peg$literalExpectation(".", false);
  var peg$e12 = peg$literalExpectation("(", false);
  var peg$e13 = peg$literalExpectation(":", false);
  var peg$e14 = peg$literalExpectation(",", false);
  var peg$e15 = peg$literalExpectation(")", false);
  var peg$e16 = peg$literalExpectation("=>", false);
  var peg$e17 = peg$literalExpectation("[", false);
  var peg$e18 = peg$literalExpectation("]", false);
  var peg$e19 = peg$literalExpectation("{", false);
  var peg$e20 = peg$literalExpectation("}", false);
  var peg$e21 = peg$otherExpectation("number");
  var peg$e22 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e23 = peg$otherExpectation("string");
  var peg$e24 = peg$literalExpectation("\"", false);
  var peg$e25 = peg$classExpectation(["\""], true, false);
  var peg$e26 = peg$literalExpectation("true", false);
  var peg$e27 = peg$literalExpectation("false", false);
  var peg$e28 = peg$otherExpectation("ast-literal");
  var peg$e29 = peg$literalExpectation("'", false);
  var peg$e30 = peg$otherExpectation("identifier");
  var peg$e31 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false);
  var peg$e32 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e33 = peg$otherExpectation("space");
  var peg$e34 = peg$literalExpectation(" ", false);
  var peg$e35 = peg$otherExpectation("whitespace");
  var peg$e36 = peg$otherExpectation("comment");
  var peg$e37 = peg$literalExpectation("#", false);
  var peg$e38 = peg$anyExpectation();
  var peg$e39 = peg$classExpectation(["\r", "?", "\n"], false, false);

  var peg$f0 = function(head, tail) {
      return {
        type: 'BlockExpression',
        statements: tail.reduce(
          (statements, [, , statement]) => [...statements, statement],
          head ? [head] : []
        ),
      };
    };
  var peg$f1 = function(pattern, expression) {
      return {
        type: 'Assignment',
        pattern,
        expression,
      }
    };
  var peg$f2 = function(head, tail) {
      return tail.reduce((expression, [, , , identifier, , argumentExpression, _arguments]) => {
        const pipelineExpression = {
          type: 'PipeExpression',
          expression,
          methodName: identifier.name,
          argumentExpression,
        }

        return _arguments.reduce((expression, [, argumentExpression]) => ({
          type: 'ApplyExpression',
          expression,
          argumentExpression,
        }), pipelineExpression);
      }, head);
    };
  var peg$f3 = function(head, tail) {
      return !tail ? head : {
        type: 'OperatorExpression', operator: '++', leftExpression: head, rightExpression: tail[3]
      };
    };
  var peg$f4 = function(head, tail) {
      return tail.reduce((leftExpression, [, operator, , rightExpression]) => ({
        type: 'OperatorExpression',
        operator,
        leftExpression,
        rightExpression,
        location: location(),
       }), head);
    };
  var peg$f5 = function(head, tail) {
      return tail.reduce((leftExpression, [, operator, , rightExpression]) => ({
        type: 'OperatorExpression',
        operator,
        leftExpression,
        rightExpression,
        location: location(),
       }), head);
    };
  var peg$f6 = function(head, tail) {
      return tail.reduce((leftExpression, [, operator, , rightExpression]) => ({
        type: 'OperatorExpression',
        operator,
        leftExpression,
        rightExpression,
        location: location(),
       }), head);
    };
  var peg$f7 = function(expression, _arguments) {
      return _arguments.reduce((expression, [, argumentExpression]) => ({
        type: 'ApplyExpression',
        expression,
        argumentExpression,
      }), expression);
    };
  var peg$f8 = function(from, to) {
      return {
        type: 'RangeExpression',
        from,
        to
      };
    };
  var peg$f9 = function(head, tail) {
      return tail.reduce((expression, [, , , argumentExpression]) => ({
        type: 'PipeExpression',
        expression,
        methodName: 'get',
        argumentExpression,
        location: location()
      }), head);
    };
  var peg$f10 = function(head, tail) {
      return tail.reduce((expression, [, member]) => ({
        type: 'MemberExpression',
        expression,
        member: member.name ? member.name : member.value
      }), head);
    };
  var peg$f11 = function(operator, argumentExpression) {
      return {
        type: 'UnaryExpression',
        operator,
        argumentExpression,
      };
    };
  var peg$f12 = function(fieldName, head, tail) {
      return head && !fieldName && tail.length === 0 ? head : {
        type: 'TupleExpression',
        expressionFields: !head ? [] : tail.reduce((expressionFields, [, , , , expressionField]) =>
          [...expressionFields, expressionField], [head]),
        expressionFieldNames: tail.reduce((fieldNames, [, , fieldName]) =>
          [...fieldNames, fieldName && fieldName[0].name], [fieldName && fieldName[0].name]),
      }
    };
  var peg$f13 = function(parameterPattern, bodyExpression) {
      return {
        type: "FunctionExpression",
        parameterPattern,
        bodyExpression,
      }
    };
  var peg$f14 = function(head, tail) {
      return {
        type: 'ArrayLiteral',
        expressionElements: !head ? [] : tail.reduce((expressionElements, [, , , expressionElement]) =>
          [...expressionElements, expressionElement], [head]),
      }
    };
  var peg$f15 = function() {
      return {
        type: 'DictLiteral',
        expressionEntries: [],
      }
    };
  var peg$f16 = function(key, head, tail) {
      return {
        type: 'DictLiteral',
        expressionEntries: tail.reduce((expressionEntries, [, , key, , , expressionValue]) =>
          [...expressionEntries, [key, expressionValue]], [[key, head]]),
      }
    };
  var peg$f17 = function(statements) {
    return statements;
  };
  var peg$f18 = function(value) {
    return ({
      type: 'NumericLiteral',
      value: Number(`${value[0].join('')}.${value[1] ? value[1][2].join('') : ''}`),
      location: location(),
    });
  };
  var peg$f19 = function(value) {
    return {
      type: 'StringLiteral',
      value: value.join(''),
      location: location(),
    };
  };
  var peg$f20 = function(value) {
    return {
      type: 'BooleanLiteral',
      value: value === 'true' ? true : false
    }
  };
  var peg$f21 = function(expression) {
      return {
        type: 'AstLiteral',
        value: expression,
      };
    };
  var peg$f22 = function(name) {
      return ({
        type: 'Identifier',
        name: name[0] + name[1].join('')
      });
    };
  var peg$f23 = function(ident, parameterPattern) {
      return {
        type: 'FunctionPattern',
        name: ident.name,
        parameterPattern,
      };
    };
  var peg$f24 = function(head, tail) {
    return head && tail.length === 0 ? head : {
      type: 'TuplePattern',
      patterns: !head ? [] : tail.reduce((patterns, [, , , pattern]) =>
        [...patterns, pattern], [head]),
    }
  };
  var peg$f25 = function(identifier) {
    return {
      type: 'IdentifierPattern',
      name: identifier.name,
    };
  };
  var peg$f26 = function(head, tail) {
    return head && tail.length === 0 ? head : {
      type: 'TuplePattern',
      patterns: !head ? [] : tail.reduce((patterns, [, , , pattern]) =>
        [...patterns, pattern], [head]),
    }
  };
  var peg$f27 = function(number) {
      return {
        type: 'NumericLiteralPattern',
        value: number.value,
      }
    };
  var peg$f28 = function(identifier, defaultExpression) {
    return {
      type: 'IdentifierPattern',
      name: identifier.name,
      defaultExpression: defaultExpression && defaultExpression[3],
    };
  };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse__();
    s2 = peg$parseStatement();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = [];
    s4 = peg$currPos;
    s5 = peg$parse_();
    s6 = [];
    s7 = peg$currPos;
    s8 = peg$parseNewline();
    if (s8 !== peg$FAILED) {
      s9 = peg$parse_();
      s8 = [s8, s9];
      s7 = s8;
    } else {
      peg$currPos = s7;
      s7 = peg$FAILED;
    }
    if (s7 !== peg$FAILED) {
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$currPos;
        s8 = peg$parseNewline();
        if (s8 !== peg$FAILED) {
          s9 = peg$parse_();
          s8 = [s8, s9];
          s7 = s8;
        } else {
          peg$currPos = s7;
          s7 = peg$FAILED;
        }
      }
    } else {
      s6 = peg$FAILED;
    }
    if (s6 !== peg$FAILED) {
      s7 = peg$parseStatement();
      if (s7 !== peg$FAILED) {
        s5 = [s5, s6, s7];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    } else {
      peg$currPos = s4;
      s4 = peg$FAILED;
    }
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$currPos;
      s5 = peg$parse_();
      s6 = [];
      s7 = peg$currPos;
      s8 = peg$parseNewline();
      if (s8 !== peg$FAILED) {
        s9 = peg$parse_();
        s8 = [s8, s9];
        s7 = s8;
      } else {
        peg$currPos = s7;
        s7 = peg$FAILED;
      }
      if (s7 !== peg$FAILED) {
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$currPos;
          s8 = peg$parseNewline();
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s8 = [s8, s9];
            s7 = s8;
          } else {
            peg$currPos = s7;
            s7 = peg$FAILED;
          }
        }
      } else {
        s6 = peg$FAILED;
      }
      if (s6 !== peg$FAILED) {
        s7 = peg$parseStatement();
        if (s7 !== peg$FAILED) {
          s5 = [s5, s6, s7];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    }
    s4 = peg$parse__();
    peg$savedPos = s0;
    s0 = peg$f0(s2, s3);

    return s0;
  }

  function peg$parseStatement() {
    var s0;

    s0 = peg$parseAssignment();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePipeExpression();
    }

    return s0;
  }

  function peg$parseAssignment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseAssignmentPattern();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 61) {
        s3 = peg$c0;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parsePipeExpression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePipeExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parseConcatenationExpression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 124) {
        s5 = peg$c1;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseIdentifier();
        if (s7 !== peg$FAILED) {
          s8 = peg$parse_();
          s9 = peg$parsePrimaryExpression();
          if (s9 === peg$FAILED) {
            s9 = null;
          }
          s10 = [];
          s11 = peg$currPos;
          s12 = peg$parse_();
          s13 = peg$parsePrimaryExpression();
          if (s13 !== peg$FAILED) {
            s12 = [s12, s13];
            s11 = s12;
          } else {
            peg$currPos = s11;
            s11 = peg$FAILED;
          }
          while (s11 !== peg$FAILED) {
            s10.push(s11);
            s11 = peg$currPos;
            s12 = peg$parse_();
            s13 = peg$parsePrimaryExpression();
            if (s13 !== peg$FAILED) {
              s12 = [s12, s13];
              s11 = s12;
            } else {
              peg$currPos = s11;
              s11 = peg$FAILED;
            }
          }
          s4 = [s4, s5, s6, s7, s8, s9, s10];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 124) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseIdentifier();
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parsePrimaryExpression();
            if (s9 === peg$FAILED) {
              s9 = null;
            }
            s10 = [];
            s11 = peg$currPos;
            s12 = peg$parse_();
            s13 = peg$parsePrimaryExpression();
            if (s13 !== peg$FAILED) {
              s12 = [s12, s13];
              s11 = s12;
            } else {
              peg$currPos = s11;
              s11 = peg$FAILED;
            }
            while (s11 !== peg$FAILED) {
              s10.push(s11);
              s11 = peg$currPos;
              s12 = peg$parse_();
              s13 = peg$parsePrimaryExpression();
              if (s13 !== peg$FAILED) {
                s12 = [s12, s13];
                s11 = s12;
              } else {
                peg$currPos = s11;
                s11 = peg$FAILED;
              }
            }
            s4 = [s4, s5, s6, s7, s8, s9, s10];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseConcatenationExpression() {
    var s0, s1, s2, s3, s4, s5, s6;
